// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RolesQueries getRole should return nothing if the requested role does not exist 1`] = `undefined`;

exports[`RolesQueries getRole should return the requested role correctly 1`] = `
Role {
  "createdAt": 2019-06-20T08:12:59.730Z,
  "createdBy": null,
  "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
  "name": "Admin",
  "permissions": Object {
    "roles": Object {
      "edit": true,
      "view": true,
    },
    "users": Object {
      "edit": true,
      "view": true,
    },
  },
  "updatedAt": 2019-06-20T08:12:59.730Z,
  "updatedBy": null,
}
`;

exports[`RolesQueries getRoles should return a paged list of roles: #0 1`] = `
Object {
  "data": Array [
    Role {
      "createdAt": 2019-10-20T08:12:59.730Z,
      "createdBy": "development@icapps.com",
      "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
      "name": "Support",
      "permissions": Object {
        "roles": Object {
          "edit": false,
          "view": true,
        },
        "users": Object {
          "edit": true,
          "view": true,
        },
      },
      "updatedAt": 2019-12-20T08:12:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    Role {
      "createdAt": 2019-08-20T08:12:59.730Z,
      "createdBy": "development@icapps.com",
      "id": "81388934-7613-4f66-a225-a0d246f65e61",
      "name": "Medewerker",
      "permissions": Object {
        "roles": Object {
          "edit": false,
          "view": false,
        },
        "users": Object {
          "edit": false,
          "view": true,
        },
      },
      "updatedAt": 2019-09-20T08:12:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    Role {
      "createdAt": 2019-06-20T08:12:59.730Z,
      "createdBy": null,
      "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
      "name": "Admin",
      "permissions": Object {
        "roles": Object {
          "edit": true,
          "view": true,
        },
        "users": Object {
          "edit": true,
          "view": true,
        },
      },
      "updatedAt": 2019-06-20T08:12:59.730Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 3,
    "skip": 0,
    "totalCount": 3,
  },
}
`;

exports[`RolesQueries getRoles should return a paged list of roles: #1 1`] = `
Object {
  "data": Array [
    Role {
      "createdAt": 2019-06-20T08:12:59.730Z,
      "createdBy": null,
      "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
      "name": "Admin",
      "permissions": Object {
        "roles": Object {
          "edit": true,
          "view": true,
        },
        "users": Object {
          "edit": true,
          "view": true,
        },
      },
      "updatedAt": 2019-06-20T08:12:59.730Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 2,
    "totalCount": 3,
  },
}
`;

exports[`RolesQueries getRoles should return a paged list of roles: #2 1`] = `
Object {
  "data": Array [
    Role {
      "createdAt": 2019-06-20T08:12:59.730Z,
      "createdBy": null,
      "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
      "name": "Admin",
      "permissions": Object {
        "roles": Object {
          "edit": true,
          "view": true,
        },
        "users": Object {
          "edit": true,
          "view": true,
        },
      },
      "updatedAt": 2019-06-20T08:12:59.730Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`RolesQueries getRoles should return a paged list of roles: #3 1`] = `
Object {
  "data": Array [
    Role {
      "createdAt": 2019-10-20T08:12:59.730Z,
      "createdBy": "development@icapps.com",
      "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
      "name": "Support",
      "permissions": Object {
        "roles": Object {
          "edit": false,
          "view": true,
        },
        "users": Object {
          "edit": true,
          "view": true,
        },
      },
      "updatedAt": 2019-12-20T08:12:59.730Z,
      "updatedBy": "development@icapps.com",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`RolesQueries getRoles should return a paged list of roles: #4 1`] = `
Object {
  "data": Array [
    Role {
      "createdAt": 2019-06-20T08:12:59.730Z,
      "createdBy": null,
      "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
      "name": "Admin",
      "permissions": Object {
        "roles": Object {
          "edit": true,
          "view": true,
        },
        "users": Object {
          "edit": true,
          "view": true,
        },
      },
      "updatedAt": 2019-06-20T08:12:59.730Z,
      "updatedBy": null,
    },
    Role {
      "createdAt": 2019-08-20T08:12:59.730Z,
      "createdBy": "development@icapps.com",
      "id": "81388934-7613-4f66-a225-a0d246f65e61",
      "name": "Medewerker",
      "permissions": Object {
        "roles": Object {
          "edit": false,
          "view": false,
        },
        "users": Object {
          "edit": false,
          "view": true,
        },
      },
      "updatedAt": 2019-09-20T08:12:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    Role {
      "createdAt": 2019-10-20T08:12:59.730Z,
      "createdBy": "development@icapps.com",
      "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
      "name": "Support",
      "permissions": Object {
        "roles": Object {
          "edit": false,
          "view": true,
        },
        "users": Object {
          "edit": true,
          "view": true,
        },
      },
      "updatedAt": 2019-12-20T08:12:59.730Z,
      "updatedBy": "development@icapps.com",
    },
  ],
  "meta": Object {
    "count": 3,
    "skip": 0,
    "totalCount": 3,
  },
}
`;

exports[`RolesQueries getRoles should return an empty list if no roles found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;
